--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
+    "husky": "^4.3.6",
     "mini-css-extract-plugin": "^1.3.3",
     "prettier": "^2.2.1",
     "sass": "^1.30.0",
@@ -40,5 +41,10 @@
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier:format && npm run eslint"
+    }
   }
 }
