--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Alex Chip <alexchip32@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@react-google-maps/api": "^2.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-paypal-button": "^4.1.1",
